feat: Actualizar el servicio de Paz y Salvo para manejar solicitudes de homologación, mejorar la gestión de archivos y optimizar la carga de solicitudes, además de añadir archivos opcionales en la interfaz y mejorar la visualización de fechas.

--- a/src/app/pages/estudiante/paz-salvo/paz-salvo.component.html
+++ b/src/app/pages/estudiante/paz-salvo/paz-salvo.component.html
@@ -4,6 +4,7 @@
   <app-required-docs
     [requiredFiles]="documentosRequeridos"
     [exclusiveFiles]="archivosExclusivos"
+    [optionalFiles]="archivosOpcionales"
     [archivos]="archivosActuales">
   </app-required-docs>  
 
