--- a/src/app/pages/coordinador/paz-salvo/paz-salvo.component.html
+++ b/src/app/pages/coordinador/paz-salvo/paz-salvo.component.html
@@ -45,7 +45,7 @@
                 <button mat-icon-button color="primary" (click)="verArchivo(archivo)" matTooltip="Visualizar">
                   <mat-icon>visibility</mat-icon>
                 </button>
-                <button mat-icon-button color="primary" (click)="añadirComentario(archivo)" matTooltip="Comentario">
+                <button mat-icon-button color="primary" (click)="agregarComentario(archivo)" matTooltip="Comentario">
                   <mat-icon>comment</mat-icon>
                 </button>
               </div>
