--- a/src/app/shared/components/request-status/request-status.component.html
+++ b/src/app/shared/components/request-status/request-status.component.html
@@ -9,7 +9,7 @@
   <!-- Fecha -->
   <ng-container matColumnDef="fecha">
     <th mat-header-cell *matHeaderCellDef> Fecha </th>
-    <td mat-cell *matCellDef="let element"> {{ element.fecha }} </td>
+    <td mat-cell *matCellDef="let element"> {{ element.fecha | fecha }} </td>
   </ng-container>
 
   <!-- Estado -->
