--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,29 +10,54 @@
       <form [formGroup]="loginForm" (ngSubmit)="onLogin()" class="login-form">
         <mat-form-field appearance="outline" class="login-input">
           <mat-label>Correo</mat-label>
-          <input matInput type="email" formControlName="correo" placeholder="correo@unicauca.edu.co">
+          <input matInput 
+                 type="email" 
+                 formControlName="correo" 
+                 placeholder="correo@unicauca.edu.co"
+                 (focus)="clearError()"
+                 autocomplete="email">
           <mat-icon matPrefix>mail</mat-icon>
           <mat-error *ngIf="loginForm.controls['correo'].invalid && loginForm.controls['correo'].touched">
-            Ingresa un correo válido
+            {{ getEmailErrorMessage() }}
           </mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="outline" class="login-input">
           <mat-label>Contraseña</mat-label>
-          <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" placeholder="Min. 8 caracteres">
+          <input matInput 
+                 [type]="hide ? 'password' : 'text'" 
+                 formControlName="password" 
+                 placeholder="Min. 8 caracteres"
+                 (focus)="clearError()"
+                 autocomplete="current-password">
           <mat-icon matPrefix>lock</mat-icon>
-          <button mat-icon-button matSuffix type="button" (click)="hide = !hide">
+          <button mat-icon-button matSuffix type="button" (click)="hide = !hide" [attr.aria-label]="hide ? 'Mostrar contraseña' : 'Ocultar contraseña'">
             <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
           </button>
           <mat-error *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password'].touched">
-            Ingresa tu contraseña
+            {{ getPasswordErrorMessage() }}
           </mat-error>
         </mat-form-field>
+
+        <!-- Indicador de fortaleza de contraseña -->
+        <div *ngIf="showPasswordStrength" class="password-strength">
+          <div class="strength-bar">
+            <div class="strength-fill" 
+                 [style.width.%]="passwordStrength" 
+                 [style.background-color]="getPasswordStrengthColor()">
+            </div>
+          </div>
+          <span class="strength-text" [style.color]="getPasswordStrengthColor()">
+            Fortaleza: {{ getPasswordStrengthText() }}
+          </span>
+        </div>
 
         <mat-checkbox formControlName="remember">Recuérdame</mat-checkbox>
 
         <button mat-raised-button type="submit" class="login-button" [disabled]="loginForm.invalid || cargando">
-          {{ cargando ? 'Ingresando...' : 'Ingresar' }}
+          <mat-spinner *ngIf="cargando" diameter="20" class="login-spinner"></mat-spinner>
+          <span *ngIf="!cargando">Ingresar</span>
+          <span *ngIf="cargando">Ingresando...</span>
         </button>
 
         <p class="error-message" *ngIf="errorMensaje">{{ errorMensaje }}</p>
