feat: Actualizar el servicio de Paz y Salvo para manejar la aprobación, rechazo y validación de solicitudes mediante un nuevo endpoint, además de añadir funcionalidades para obtener y descargar oficios, y mejorar la interfaz de usuario con cambios en los componentes y estilos.

--- a/src/app/pages/estudiante/paz-salvo/paz-salvo.component.css
+++ b/src/app/pages/estudiante/paz-salvo/paz-salvo.component.css
@@ -1,5 +1,5 @@
 /* Contenedor principal */
-.paz-salvo-container {
+.homologacion-container {
   display: flex;
   flex-direction: column;
   gap: 24px;
