--- a/src/app/pages/funcionario/paz-salvo/paz-salvo.component.html
+++ b/src/app/pages/funcionario/paz-salvo/paz-salvo.component.html
@@ -29,16 +29,6 @@
             <td mat-cell *matCellDef="let archivo">{{ archivo.nombre }}</td>
           </ng-container>
 
-          <!-- Estado -->
-          <ng-container matColumnDef="estado">
-            <th mat-header-cell *matHeaderCellDef>Estado</th>
-            <td mat-cell *matCellDef="let archivo">
-              <span [class]="'estado-' + (archivo.estado || 'pendiente')">
-                {{ archivo.estado || 'Pendiente' }}
-              </span>
-            </td>
-          </ng-container>
-
           <!-- Acciones -->
           <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef>Acciones</th>
@@ -54,8 +44,8 @@
             </td>
           </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="['nombre', 'estado', 'acciones']"></tr>
-          <tr mat-row *matRowDef="let row; columns: ['nombre', 'estado', 'acciones'];"></tr>
+          <tr mat-header-row *matHeaderRowDef="['nombre', 'acciones']"></tr>
+          <tr mat-row *matRowDef="let row; columns: ['nombre', 'acciones'];"></tr>
         </table>
       </div>
 
